samples/_failures_safe/1761667238_fbb7a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41fa4cf2.c: In function ‘main’:
./samples/SAFE/__tmp_41fa4cf2.c:137:25: error: ‘get’ undeclared (first use in this function); did you mean ‘getc’?
  137 |     enum Operation op = get
      |                         ^~~
      |                         getc
./samples/SAFE/__tmp_41fa4cf2.c:137:25: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_41fa4cf2.c:137:10: error: expected ‘,’ or ‘;’ at end of input
  137 |     enum Operation op = get
      |          ^~~~~~~~~
./samples/SAFE/__tmp_41fa4cf2.c:137:10: error: expected declaration or statement at end of input
